--- a/app/src/main/res/layout/activity_payment_notification.xml
+++ b/app/src/main/res/layout/activity_payment_notification.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PaymentNotification">
+    tools:context=".Services.PaymentNotification">
 
     <TextView
         android:id="@+id/tvNotify"
