--- a/app/src/main/res/layout/activity_services_list.xml
+++ b/app/src/main/res/layout/activity_services_list.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="8dp"
-    tools:context=".Activity.ServicesPet.ServicesListActivity">
+    tools:context=".activity.servicesPet.ServicesListActivity">
 
 
     <androidx.recyclerview.widget.RecyclerView
