--- a/app/src/main/res/layout/activity_pet_detail_update_delete.xml
+++ b/app/src/main/res/layout/activity_pet_detail_update_delete.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".Activity.Pet.PetDetail_Update_Delete">
+    tools:context=".activity.pet.PetDetail_Update_Delete">
 
     <LinearLayout
         android:layout_width="match_parent"
